--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Partial Derivative Calculator</title>
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
@@ -15,7 +16,9 @@
         body {
             font-family: Arial, sans-serif;
             margin: 2em auto;
-            max-width: 800px;
+            max-width: 100%;
+            padding: 1rem;
+            box-sizing: border-box;
             line-height: 1.6;
         }
 
